--- a/index.html
+++ b/index.html
@@ -1,51 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive card details form</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <!-- main css -->
+    <link rel="stylesheet" href="styles.css" />
 
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
+    <title>Frontend Mentor | Interactive card details form</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <!--filler-->
+      <div class="filler"></div>
 
-  000
+      <main>
+        <!--credit card-->
+        <div class="credit-card">
+          <!--credit card front-->
+          <div class="card card--front">
+            <img src="./images/card-logo.svg" alt="logo" class="card__logo" />
 
-  Cardholder Name
-  e.g. Jane Appleseed
+            <p class="card__number">0000 0000 0000 0000</p>
 
-  Card Number
-  e.g. 1234 5678 9123 0000
+            <!--card information-->
+            <div class="card__information">
+              <p class="card__name">Jane Appleseed</p>
+              <p class="card__exp">
+                <span class="card__exp-month">00</span>/
+                <span class="card__exp-year">00</span>
+              </p>
+            </div>
+          </div>
 
-  Exp. Date (MM/YY)
-  MM
-  YY
+          <!--credit card back-->
+          <div class="card card--back">
+            <p class="card__number--back">000</p>
+          </div>
+        </div>
 
-  CVC
-  e.g. 123
+        <!--form-->
+        <form class="form" action="#">
+          <!--card holder name-->
+          <label for="name">Cardholder Name </label>
 
-  Confirm
+          <div class="input-border-wrapper">
+            <input
+              type="text"
+              name="cardholder-name"
+              id="name"
+              placeholder="e.g. Jane Appleseed"
+              aria-invalid="false"
+            />
+          </div>
 
-  <!-- Completed state start -->
+          <!--error message-->
+          <p class="error-msg hidden">Wrong format, numbers</p>
 
-  Thank you!
-  We've added your card details
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+          <!--card number-->
+          <label for="number">Card Number </label>
+
+          <div class="input-border-wrapper">
+            <input
+              type="text"
+              name="card-number"
+              id="number"
+              placeholder="e.g. 1234  9123 0000 "
+              aria-invalid="false"
+            />
+          </div>
+
+          <!--error message-->
+          <p class="error-msg hidden">Wrong format, numbers</p>
+
+          <!--a div element which wrap the expire date and cvc-->
+          <div class="form-control-group">
+            <!--form control-->
+            <!--expire date-->
+            <div class="form-control">
+              <label for="exp-date">Exp. Date (MM/YY)</label>
+
+              <div class="container">
+                <div class="input-border-wrapper">
+                  <input
+                    type="text"
+                    name="card-month"
+                    id="exp-date"
+                    placeholder="MM "
+                    aria-invalid="false"
+                  />
+                </div>
+
+                <!--error message-->
+                <p class="error-msg hidden error-card-month">
+                  Wrong format, numbers
+                </p>
+              </div>
+
+              <div class="container">
+                <div class="input-border-wrapper">
+                  <input
+                    type="text"
+                    name="card-year"
+                    placeholder="YY"
+                    aria-invalid="false"
+                  />
+                </div>
+
+                <!--error message-->
+                <p class="error-msg hidden error-card-year">
+                  Wrong format, numbers
+                </p>
+              </div>
+            </div>
+
+            <!--form-control-->
+            <div class="form-control">
+              <!--cvc-->
+              <label for="cvc">CVC </label>
+
+              <div class="input-border-wrapper">
+                <input
+                  type="text"
+                  name="CVC"
+                  placeholder="e.g. 123"
+                  id="cvc"
+                  aria-invalid="false"
+                />
+              </div>
+
+              <!--error message-->
+              <p class="error-msg hidden">Wrong format, numbers</p>
+            </div>
+          </div>
+
+          <!--submit button-->
+          <button type="submit">Confirm</button>
+        </form>
+
+        <!-- Completed state start -->
+
+        <div class="thankyou hidden">
+          <img
+            src="images/icon-complete.svg"
+            alt="complete image"
+            class="complete-image"
+          />
+
+          <p class="thankyou__text">Thank you!</p>
+
+          <p class="thankyou_text-2">We've added your card details</p>
+
+          <!--submit button-->
+          <button class="thankyou__btn" type="submit">Continue</button>
+        </div>
+      </main>
+
+      <!--footer-->
+      <footer>
+        <div class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a href="https://www.frontendmentor.io/profile/JonaG684"
+            >Jonathan Garcia</a
+          >.
+        </div>
+      </footer>
+    </div>
+
+    <!--javascript-->
+    <script src="script.js"></script>
+  </body>
 </html>
